--- a/package.json
+++ b/package.json
@@ -59,5 +59,11 @@
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0"
+  },
+  "overrides": {
+    "@nx/vite": {
+      "vite": "^6.0.11",
+      "vitest": "^3.0.0"
+    }
   }
 }
